@@ -283,7 +283,7 @@ p {
   margin-top: 1px;
 }
 #errors
-;2;16;m;syntax error:'margin-top'
+;2;15;m;syntax error:'margin-top'
 #cssom
 | <p>
 |   margin-top: 1px
@@ -294,7 +294,7 @@ p {
   margin-top: invalid;
 }
 #errors
-;3;16;m;syntax error:'margin-top'
+;3;15;m;syntax error:'margin-top'
 #cssom
 | <p>
 |   margin-top: 1px
@@ -305,7 +305,7 @@ p {
   margin-top: 1px;
 }
 #errors
-;3;16;m;syntax error:'margin-top'
+;2;15;m;syntax error:'margin-top'
 #cssom
 | <p>
 |   margin-top: 1px
@@ -316,7 +316,7 @@ p {
   margin-top: invalid !important;
 }
 #errors
-;3;16;m;syntax error:'margin-top'
+;3;15;m;syntax error:'margin-top'
 #cssom
 | <p>
 |   margin-top: 1px
