@@ -1,5 +1,14 @@
 2008-01-26  Wakaba  <wakaba@suika.fam.cx>
 
+	* css-1.dat: Some test results were incorrect.
+
+	* css-font.dat: New test data on 'font' are added.
+
+	* css-visual.dat: Some test results were incorrect.  New
+	test data on 'margin' are added.
+
+2008-01-26  Wakaba  <wakaba@suika.fam.cx>
+
 	* css-font.dat: New test file.
 
 	* CSS-Parser-1.dat: |css-font.dat| is added.
